--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
