--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "add": "^2.0.6",
-    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
-    "date-fns": "^2.14.0",
+    "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
-    "moment": "^2.26.0",
     "react": "^16.13.1",
-    "react-datepicker": "^2.16.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
